--- a/latex/aplicaciones_edos.tex
+++ b/latex/aplicaciones_edos.tex
@@ -20,9 +20,7 @@
 	\]
 	donde $r$ es la constante de proporcionalidad.
 
-
-
-	\begin{problema}
+	\begin{resuelto}
 		Una persona deposita $\$20,000$ en una cuenta de ahorros que paga el 5\% de interés  anual, compuesto continuamente.
 		Encuentre
 		\begin{enumerate}
@@ -30,7 +28,7 @@
 			\item el tiempo requerido para que la cuenta al doble de su valor, sin contar retiros ni depósitos extras.
 		\end{enumerate}
 
-	\end{problema}
+	\end{resuelto}
 
 
 
@@ -47,14 +45,14 @@
 
 
 %
-  \begin{problema}
+  \begin{resuelto}
    Una barra de metal a una temperatura de $100^\circ F$ es ubicado en un cuarto a una temperatura constante de $0^\circ F.$ Si después de 20 minutos, la temperatura de la barra es de $50^\circ F,$ encuentre:
    \begin{enumerate}
     \item el tiempo que tomará alcanzar $25^\circ F$ y;
     \item la temperatura de la barra después de 10 minutos.
    \end{enumerate}
 
-  \end{problema}
+  \end{resuelto}
 
 
 
@@ -94,14 +92,14 @@
 		\dfrac{dv}{dt}+\dfrac{k}{m}v=g.
 	\]
 
-  \begin{problema}
+  \begin{resuelto}
    Una bola de acero que pesa 2 lbs se deja caer desde una altura de 3000 pies sin velocidad. Mientras cae, encuentra una resistencia del aire (numéricamente) igual a $\frac{v}{8}$ (en libras), donde $v$ indica la velocidad de la bola (en pies sobre segundo). Encuentre
    \begin{enumerate}
     \item la velocidad límite para la bola;
     \item y el tiempo requerido para que bola impacte en el suelo.
    \end{enumerate}
 
-  \end{problema}
+  \end{resuelto}
 
 
 
@@ -160,7 +158,7 @@
 
 
 
-	\begin{problema}
+	\begin{resuelto}
 		\label{bron:exmp:7.17}
 		Un tanque contiene inicialmente $100$ litros de una solución de salmuera con $1$ kilo de sal. En $t=0$ se vierte otra solución de salmuera que contiene $1$ kilo de sal por litro a un ritmo de $3$ litros/minuto, en tanto que la salmuera bien agitada abandona el tanque al mismo ritmo. Encuentre
 		\begin{enumerate}
@@ -168,7 +166,7 @@
 			\item el tiempo en el cual la mezcla en el tanque contiene 2 kilos de sal.
 		\end{enumerate}
 
-	\end{problema}
+	\end{resuelto}
 
 
 
@@ -198,9 +196,9 @@
 
 
 
-	\begin{problema}
+	\begin{resuelto}
 		Un circuito $RL$ tiene una $fem$ de 5 voltios, una resistencia de 50 ohmios, una inductancia de 1 henrio y no tiene corriente inicial. Encuentre la corriente de estado estacionario, i.e., cuando $t\to \infty.$
-	\end{problema}
+	\end{resuelto}
 
 
 
@@ -245,9 +243,9 @@
 
 
 {}
-	\begin{problema}
+	\begin{resuelto}
 		Un circuito \texttt{RC} tiene una \texttt{fem} dada por $400\cos(2t),$ una resistencia de \texttt{100 ohms} y una capacitancia de \texttt{1/100 faradios}. No existe carga inicial en el capacitor. Encuentre la corriente del circuito en función del tiempo, y determine su comportamiento asintótico.
-	\end{problema}
+	\end{resuelto}
 
 
 
