--- a/latex/aplicaciones_segundo_orden.tex
+++ b/latex/aplicaciones_segundo_orden.tex
@@ -33,17 +33,17 @@ donde $a,k$ son constantes positivas de proporcionalida; $F(t)$ es una fuerza ex
 
 
 
-\begin{problema}
+\begin{resuelto}
 	\label{bron:exmp:14.2}
 	Una masa de $2kg$ se suspende de un resorte con una constante conocida de $10N/m,$ y se le permite llegar a una posici\'on de reposo. Luego se le pone en movimiento dándole una velocidad inicial de $150cm/seg.$ Encuentre una expresi\'on para el movimiento de la masa, suponiendo que no hay resistencia del aire.
-\end{problema}
+\end{resuelto}
 
 
 
 
-\begin{problema}
+\begin{resuelto}
 	Encuentre la frecuencia circular; la frecuencia natural y el periodo el oscilador arm\'onico simple del problema \ref{bron:exmp:14.2}.
-\end{problema}
+\end{resuelto}
 
 
 
@@ -67,7 +67,7 @@ donde $a,k$ son constantes positivas de proporcionalida; $F(t)$ es una fuerza ex
 \end{itemize}
 
 
-{La ley del bucle de Kirchhoff}	
+{La ley del bucle de Kirchhoff}
 La suma algebraica de las caídas de voltaje en un circuito eléctrico cerrado simple es cero.
 
 
@@ -87,9 +87,9 @@ La suma algebraica de las caídas de voltaje en un circuito eléctrico cerrado s
 
 {}
 \begin{align*}
-	\dfrac{d^{2}q}{dt^{2}} 
+	\dfrac{d^{2}q}{dt^{2}}
 	+\dfrac{R}{L}\dfrac{dq}{dt}
-	+\dfrac{1}{LC}q = 
+	+\dfrac{1}{LC}q =
 	\dfrac{1}{L}E(t)
 \end{align*}
 
@@ -102,14 +102,14 @@ La suma algebraica de las caídas de voltaje en un circuito eléctrico cerrado s
 
 
 {}
-\begin{problema}
+\begin{resuelto}
 	Un circuito RCL conectado en serie tiene $R = 180$ ohmios, $C = 1/280$ faradio, $L = 20$ henries, y una aplicada
-	voltaje $E(t) = 10 \sen t$. 
-	
-	
+	voltaje $E(t) = 10 \sen t$.
+
+
 	Suponiendo que no hay carga inicial en el capacitor, sino una corriente inicial de 1 amperio en
 	$t = 0$ cuando se aplica la tensión por primera vez, encuentre la carga subsiguiente en el capacitor.
-\end{problema}
+\end{resuelto}
 
 
 
