--- a/latex/bases_y_dimension.tex
+++ b/latex/bases_y_dimension.tex
@@ -23,11 +23,11 @@ es decir, la única relaci\'on lineal entre los elementos de $B$ es la trivial. 
 Es decir, $B$ es un base si cualquier $v\in V$ es una combinaci\'on lineal de sus elementos, no falta informaci\'on, y
 ninguno de los elementos de la base es combinaci\'on lineal de los restantes, es decir, no sobra informaci\'on. Una vez
 que tenemos una base, toda lo que necesitamos saber sobre el espacio vectorial se puede obtener a partir de los
-elementos de la base. 
+elementos de la base.
 \end{observacion}
 
 \begin{proposicion}
-Toda base de un espacio vectorial tiene el mismo número de elementos. 
+Toda base de un espacio vectorial tiene el mismo número de elementos.
 \end{proposicion}
 
 \begin{definicion}
@@ -63,7 +63,7 @@ $$
 $$
 \end{proposicion}
 
-\begin{problema}
+\begin{resuelto}
  Determine si
   $$B'=\set{\begin{bmatrix}
          1 \\ 0
@@ -72,7 +72,7 @@ $$
          1 \\ 1
         \end{bmatrix}
 }$$ es base de $\R^{2}$.
-\end{problema}
+\end{resuelto}
 
 
 \begin{solucion} Sabemos que
@@ -102,10 +102,10 @@ es un conjunto de 2 vectores \emph{linealmente independientes}. Por tanto, $B'$ 
 \end{solucion}
 
 
-\begin{problema}
+\begin{resuelto}
  Encuentre una base para $\ker{T}$ y otra para $\Im{T},$ para la transformaci\'on definida en el ejercicio de muestra
-\ref{trans_exmp}. Indique cuál es la dimensi\'on de cada espacio. 
-\end{problema}
+\ref{trans_exmp}. Indique cuál es la dimensi\'on de cada espacio.
+\end{resuelto}
 
 \begin{solucion}
  Como ya vimos en el ejercicio de muestra \ref{texmp:ker},
@@ -165,13 +165,13 @@ Entonces \begin{align*}
         \end{bmatrix}\\
 \Rightarrow c_{1}=c_{2}&=0.
          \end{align*}
-         
+
 Por tanto, $$\set{\begin{bmatrix}
      1 \\ 0 \\ 2
     \end{bmatrix}, \begin{bmatrix}
          2 \\ -1 \\ 7
         \end{bmatrix}}$$  es un conjunto linealmente independiente,  y por tanto una base de $\Im(T).$ Entonces
-$\ran{T}=2.$  
+$\ran{T}=2.$
 
 \end{solucion}
 
@@ -184,7 +184,7 @@ $$\dim{V}=\nul{T}+\ran{T}.$$
 
 \subsection*{Ejemplos}
 
-\begin{problema}
+\begin{resuelto}
  Determine si el conjunto $E$ es base del espacio vectorial $V.$
  \begin{enumerate}
   \item $E=\set{\bm{1\\0},\bm{0\\-1}}$, $V=\R^{2}$,
@@ -192,10 +192,10 @@ $$\dim{V}=\nul{T}+\ran{T}.$$
   \item $E=\set{\bm{1\\0\\0},\bm{1\\1\\0},\bm{1\\1\\1}}$, $V=\R^{3}.$
  \end{enumerate}
 
-\end{problema}
+\end{resuelto}
 
 
-\begin{problema}
+\begin{resuelto}
  Para cada una de las transformaciones lineales $T:V \to W,$ del ejercicio \ref{exe:trans}, encuentre
  \begin{enumerate}
   \item Una base de $\ker{T},$
@@ -204,7 +204,7 @@ $$\dim{V}=\nul{T}+\ran{T}.$$
   \item $\ran{T},$
 \end{enumerate}
 y verifique la afirmaci\'on del teorema \ref{thm:dim}.
-\end{problema}
+\end{resuelto}
 
 
 
