--- a/latex/coeficientes_indeterminados.tex
+++ b/latex/coeficientes_indeterminados.tex
@@ -58,13 +58,13 @@ Recordemos que la solución general de la ecuación $y''-y'-2y=0$ está dada por
 
 
 
-\begin{problema}
+\begin{resuelto}
 	\label{bron:exmp:11.1}
 	Resuelva
 	$$
 	y''-y'-2y=4x^{2}
 	$$
-\end{problema}
+\end{resuelto}
 
 
 
@@ -80,13 +80,13 @@ Si suponemos que $\phi(x)$ es una funci\'on exponencial, entonces
 
 
 
-\begin{problema}
+\begin{resuelto}
 	\label{bron:exmp:11.2}
 	Resuelva
 	$$
 	y''-y'-2y=e^{3x}.
 	$$
-\end{problema}
+\end{resuelto}
 
 
 
@@ -111,13 +111,13 @@ Si suponemos que $\phi(x)$ es una funci\'on senoidal, entonces
 
 
 
-\begin{problema}
+\begin{resuelto}
 	\label{bron:exmp:11.3}
 	Resuelva
 	$$
 	y''-y'-2y=\sin(2x).
 	$$
-\end{problema}
+\end{resuelto}
 
 
 
@@ -133,13 +133,13 @@ Si $\phi(x)=e^{\a x}p_{n}(x),$ entonces
 
 
 {}
-\begin{problema}
+\begin{resuelto}
 	Resolver
 	\begin{align*}
 		y'' = e^{-x}x^2
 	\end{align*}
-	
-\end{problema}
+
+\end{resuelto}
 
 
 
@@ -153,13 +153,13 @@ Si $\phi(x)=ke^{\a x}\sin(\b x)$ o $\phi(x)=ke^{\a x}\cos(\b x),$ entonces
 
 
 {}
-\begin{problema}
-	Resuelva 
+\begin{resuelto}
+	Resuelva
 	\begin{align*}
 		y'' = e^{-x}\cos(3x)
 	\end{align*}
-	
-\end{problema}
+
+\end{resuelto}
 
 
 
@@ -177,8 +177,8 @@ Aun más, si $\phi(x)=ke^{\a x}\sin(\b x)p_{n}(x)$ o $\phi(x)=ke^{\a x}\cos(\b x
 
 \begin{observacion}
 	Si cualquier t\'ermino de $y_{p},$ salvo por los t\'erminos constantes, es tambi\'en un t\'ermino de $y_{h},$ entonces $y_{p}$ \emph{debe ser modificada} multiplicandola por $x^{m}.$
-	
-	
+
+
 	Aqu\'i $m$ es el entero positivo más pequeño tal que el producto $x^{m}y_{p}$ no tiene t\'erminos en común con $y_{h}.$
 \end{observacion}
 
@@ -186,16 +186,16 @@ Aun más, si $\phi(x)=ke^{\a x}\sin(\b x)p_{n}(x)$ o $\phi(x)=ke^{\a x}\cos(\b x
 
 %%%%%%%%%%%%%%%%%
 {}
-\begin{problema}
+\begin{resuelto}
 	Resuelve la ecuación
 	\begin{align*}
 		y''-y'-2y = \dfrac{1}{2}e^{-x}
 	\end{align*}
-	
-\end{problema}
+
+\end{resuelto}
 
 
-%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%
 
 \begin{observacion}
 	Si  $\phi(x)$ no tiene alguna de las formas anteriores o la ecuaci\'on diferencial no tiene coeficientes constantes, este m\'etodo no se puede aplicar.
@@ -206,12 +206,12 @@ Aun más, si $\phi(x)=ke^{\a x}\sin(\b x)p_{n}(x)$ o $\phi(x)=ke^{\a x}\cos(\b x
 
 %%%%%%%%%%%%%%%%%
 {}
-Consideremos la ecuación diferencial 
+Consideremos la ecuación diferencial
 \begin{align*}
 	\label{superposicion}
 	L[y] = \phi_{1}(x) + \phi_{2}(x)
 \end{align*}
-donde $L$ es un operador diferencial lineal con coeficientes constantes de la forma 
+donde $L$ es un operador diferencial lineal con coeficientes constantes de la forma
 \begin{align*}
 	L[y] = y^{(n)}+...+a_{1}y'+a_{0}y
 \end{align*}
@@ -224,20 +224,20 @@ Digamos que $y_{h}(x)$ es la solución de la ecuación homogénea asociada, es d
 
 %%%%%%%%%%%%%%%%%
 {}
-Entonces $y(x)=y_{h}(x)+y_{p1}(x)+y_{p2}(x)$ resuelve la ecuación 
+Entonces $y(x)=y_{h}(x)+y_{p1}(x)+y_{p2}(x)$ resuelve la ecuación
 $$
 L[y]=\phi_{1}(x)+\phi_{2}(x).
 $$
 
 %%%%%%%%%%%%%%%%%
 {}
-\begin{problema}
+\begin{resuelto}
 	Resuelve la ecuación
 	\begin{align*}
 		y''-y'-2y=2e^{3x}-3t^{2}
 	\end{align*}
-	
-\end{problema}
+
+\end{resuelto}
 
 
-%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%
