--- a/latex/diagonalizacion.tex
+++ b/latex/diagonalizacion.tex
@@ -4,12 +4,12 @@
 
 \begin{definicion}
  $A\in M_{n}$ se dice que es \emph{diagonalizable} si existe una base de $\R^{n}$ que consista de vectores propios de
-$A$. 
+$A$.
 \end{definicion}
 
-\begin{problema}
+\begin{resuelto}
  Determine si la matriz $A$ definida en (\ref{no:diagonal}) es diagonalizable.
-\end{problema}
+\end{resuelto}
 
 \begin{solucion}
  Como vimos en las secciones anteriores, los valores propios de $A$ son $\lam_{1}=2$ y $\lam_{2}=1,$ con respectivos
@@ -154,7 +154,7 @@ En este caso, decimos que $D$ es una matriz diagonal \emph{semejante} a $A.$
 Para un repaso de cambios de base, consulte la sección \ref{sec:coordenadas}.
 
 
-\begin{problema}
+\begin{resuelto}
  Determine si la matriz $$A=
 \begin{bmatrix}
  3 & 2 & 4 \\
@@ -163,7 +163,7 @@ Para un repaso de cambios de base, consulte la sección \ref{sec:coordenadas}.
 \end{bmatrix}
  $$
  es diagonalizable y encuentre una matriz diagonal semejante.
-\end{problema}
+\end{resuelto}
 
 \begin{solucion}
  Para encontrar los vectores propios, podemos proceder como en la sección \ref{sec:eigenvectors}. Para hacer más
@@ -315,14 +315,14 @@ de $A.$
 
 \subsection*{Ejemplos}
 
-\begin{problema}
+\begin{resuelto}
  Determine si cada matriz $A$ en el ejercicio  \ref{exe:diagonal} son diagonalizables, y en caso de serlo, encuentre
  \begin{enumerate}
   \item Una base $F$ de vectores propios de A;
   \item la matriz $P=P_{F,E}$ cambio de base, donde  $E$ es la base estandar del respectivo espacio vectorial;
   \item la matriz diagonal $D$ semejante a $A,$ usando la matriz cambio de base $P.$
- \end{enumerate} 
+ \end{enumerate}
 
-\end{problema}
+\end{resuelto}
 
 
