--- a/latex/ecuaciones_orden_superior.tex
+++ b/latex/ecuaciones_orden_superior.tex
@@ -51,76 +51,76 @@ $$
 \subsection{Ejemplos}
 
 
-\begin{problema}
+\begin{resuelto}
 	Resuelva $$\begin{cases}
 		y'''+y'=0\\
 		y(0)=3, y'(0)=1, y''(0)=2
 	\end{cases}
 	$$
-\end{problema}
+\end{resuelto}
 
 
 
 
-\begin{problema}
+\begin{resuelto}
 	Resuelva
 	$$\begin{cases}
 		y^{(4)}-2y^{(3)}+6y^{(2)}-10y^{(1)}+5y=0 \\
 		y(0)=1, y'(0)=0, y''(0)=1, y'''(0)=0.
 	\end{cases}
 	$$
-\end{problema}
+\end{resuelto}
 
 
 
 \subsection{Ejemplos}
 
 
-\begin{problema}
+\begin{resuelto}
 	\label{bron:exmp:10.1}
 	Resuelva
 	$$
 	y'''-6y''+11y'-6y=0.
 	$$
-\end{problema}
+\end{resuelto}
 
 
 
 
-\begin{problema}
+\begin{resuelto}
 	\label{bron:10.2}
 	Resuelva
 	$$
 	y^{(4)}-9y''+20y=0.
 	$$
-\end{problema}
+\end{resuelto}
 
 
 
 
-\begin{problema}
+\begin{resuelto}
 	\label{bron:10.4}
 	Resuelva
 	$$
 	y'''-6y''+2y'+36y=0.
 	$$
-\end{problema}
+\end{resuelto}
 
 
 
 
-\begin{problema}
+\begin{resuelto}
 	\label{bron:10.6}
 	Resuelva
 	$$
 	y^{(4)}+8y'''+24y''+32y'+16y=0.
 	$$
-\end{problema}
+\end{resuelto}
 
 
 
 
-\begin{problema}
+\begin{resuelto}
 	\label{bron:10.7}
 	Resuelva
 	$$
@@ -130,7 +130,7 @@ $$
 	+2\dfrac{d^{2}P}{dt^{2}}
 	+\dfrac{dP}{dt}-P=0.
 	$$
-\end{problema}
+\end{resuelto}
 
 
 
