--- a/latex/edos_primer_orden.tex
+++ b/latex/edos_primer_orden.tex
@@ -107,7 +107,7 @@ Un criterio para determinar si una ecuación es exacta es verificar que
 {}
   \begin{figure}
  \centering
- \includegraphics[height=.6\textheight,keepaspectratio=true]{./edo/factores_integrantes_usuales.png}
+ \includegraphics[width=.6\textwidth,keepaspectratio=true]{./edo/factores_integrantes_usuales.png}
  % factores_integrantes_usuales.png: 685x622 px, 96dpi, 18.12x16.46 cm, bb=0 0 514 466
  \caption{Algunos ejemplos de factores integrantes.}
  \label{fig:factores_integrantes_usuales}
