--- a/latex/edos_segundo_orden.tex
+++ b/latex/edos_segundo_orden.tex
@@ -17,9 +17,9 @@ la cual se conoce como \emph{ecuaci\'on caracter\'istica} de \eqref{bron:9.1}.
 
 
 
-\begin{problema}
+\begin{resuelto}
 	La ecuaci\'on caracter\'istica de $$y''+3y'-4y=0$$ es  $$\lam^{2}+3\lam-4=0;$$  mientras que la ecuaci\'on caracter\'istica de $$y''-2y'+y=0$$ es  $$\lam^{2}-2\lam+1=0.$$
-\end{problema}
+\end{resuelto}
 
 
 
@@ -55,7 +55,7 @@ $$
 
 
 
-\begin{problema}
+\begin{resuelto}
 	\label{bron:exmp:9.1}
 	Resuelva
 	$$\begin{cases}
@@ -63,7 +63,7 @@ $$
 		y(0)=1, \; y'(0)=0
 	\end{cases}
 	$$
-\end{problema}
+\end{resuelto}
 
 
 
@@ -71,8 +71,8 @@ $$
 
 
 \subsection{Caso 2. $\lam =a\pm ib\in \C, b\neq 0.$}
-En este caso, 
-\emph{necesariamente} $\lam_{2}=a-ib;$ y 
+En este caso,
+\emph{necesariamente} $\lam_{2}=a-ib;$ y
 la soluci\'on esta dada por
 \[
 	\label{bron:9.5}
@@ -89,7 +89,7 @@ que es algebraicamente equivalente a
 
 
 
-\begin{problema}
+\begin{resuelto}
 	\label{bron:exmp:9.7}
 	Resuelva
 	$$\begin{cases}
@@ -97,7 +97,7 @@ que es algebraicamente equivalente a
 		y(0)=2, \; y'(0)=1
 	\end{cases}
 	$$
-\end{problema}
+\end{resuelto}
 
 
 
@@ -112,7 +112,7 @@ que es algebraicamente equivalente a
 
 
 
-\begin{problema}
+\begin{resuelto}
 	\label{bron:exmp:9.15}
 	Resuelva
 	$$\begin{cases}
@@ -121,54 +121,54 @@ que es algebraicamente equivalente a
 		u(0)=2, \; u'(0)=1
 	\end{cases}
 	$$
-\end{problema}
+\end{resuelto}
 
 
 
 
-\begin{problema}
+\begin{resuelto}
 	\label{bron:exmp:9.2}
 	Resuelva $$y''-7y'=0.$$
-\end{problema}
+\end{resuelto}
 
 
 
 
 
-\begin{problema}
+\begin{resuelto}
 	\label{bron:exmp:9.3}
 	Resuelva
 	$$y''-5y=0.$$
-\end{problema}
+\end{resuelto}
 
 
 
 
-\begin{problema}
+\begin{resuelto}
 	\label{bron:exmp:9.4}
 	Vuelva a escribir el problema \ref{bron:exmp:9.3} en t\'erminos de funciones hiperb\'olicas.
-\end{problema}
+\end{resuelto}
 
 
 
 
-\begin{problema}
+\begin{resuelto}
 	\label{bron:exmp:9.5}
 	Resuelva
 	$$
 	\ddot{y}+10\dot{y}+21y=0.
 	$$
-\end{problema}
+\end{resuelto}
 
 
 
 
-\begin{problema}
+\begin{resuelto}
 	\label{bron:exmp:9.8}
 	Resuelva
 	$$
 	y''+4y=0.
 	$$
-\end{problema}
+\end{resuelto}
 
 
