--- a/latex/espacios_vectoriales.tex
+++ b/latex/espacios_vectoriales.tex
@@ -4,7 +4,7 @@
 
 Hasta ahora hemos considerado a los vectores como elementos de un espacio $$\R^{n}=\set{(x_{1},...,x_{n}|x_{k}\in\R)},$$ por ejemplo vectores en el plano $\R^{2}=\set{(x,y)|x,y\in \R}$ o en el espacio $\R^{3}=\set{(x,y,z)|x,y,z\in \R}.$ En cada caso, ten\'iamos una suma entre vectores y una multiplicaci\'on por \emph{escalares,} es decir, número reales.
 
-\begin{problema}
+\begin{resuelto}
  Si ${u}=(u_{1},u_{2})$ y ${v}=(v_{1},v_{2})$ son vectores en $\R^{2},$ y $\a \in \R,$ entonces $$(u_{1},u_{2})+(v_{1},v_{2})=(u_{1}+v_{1},u_{2}+v_{2}),$$ mientras que $$\a(u_{1},u_{2})=(\a u_{1},\a u_{2}).$$
 
 
@@ -45,12 +45,12 @@ $$
   \item $(\a+\b)u=((\a+\b)u_{1},(\a+\b)u_{2})=(\a u_{1},\a u_{2})+(\b u_{1},\b u_{2})=\a u +\b u,$
   \item $\a(u+v)=\a(u_{1}+v_{1},u_{2}+v_{2})=(\a(u_{1}+v_{1}),\a(u_{2}+v_{2}))=\a(u_{1},u_{2})+\a(v_{1},v_{2})=\a u +\a v.$
  \end{enumerate}
-\end{problema}
+\end{resuelto}
 
-\begin{problema}[\dag]
+\begin{resuelto}[\dag]
  Verificar que las mismas propiedades se cumplen para $\R^{3},$ usando la suma de vectores y multiplicaci\'on por
 escalares conocida.
-\end{problema}
+\end{resuelto}
 
 Estas propiedades se cumplen para muchos y muy diferentes conjuntos, donde tenemos una operaci\'on suma entre sus elementos y podemos definir una multiplicaci\'on por números reales. De hecho, estos conjuntos son los objetos de estudio en el álgebra lineal.
 
@@ -85,7 +85,7 @@ $\cdot:\R \to V \to V,$ por brevedad, decimos que $(V, +, \cdot)$ es un espacio 
 
 %Para resolver los ejercicios de esta secci\'on puede consultar \cite[sec. 4.2]{G} y \cite[sec. 2.1]{HK}.
 
-\begin{problema}[\dag]
+\begin{resuelto}[\dag]
 Demuestre usando las propiedades anteriores, que en cualquier espacio vectorial se cumplen las siguientes propiedades.
 \begin{enumerate}
  \item $0  u=\a  0=0.$ (Note que el cero escrito a la izquierda denota el cero como número, mientras que escrito a la izquierda o solo, denota el elemento neutro  del espacio vectorial.)
@@ -94,9 +94,9 @@ Demuestre usando las propiedades anteriores, que en cualquier espacio vectorial 
  \item El elemento neutro $0$ es único.
  \item Para cada vector $u,$ su inverso aditivo $-u$ es único.
 \end{enumerate}
-\end{problema}
+\end{resuelto}
 
-\begin{problema}
+\begin{resuelto}
  Compruebe que los siguientes conjuntos son espacios vectoriales (reales), con las operaciones suma y multiplicaci\'on por escalar usuales.
  \begin{enumerate}
  \item $\set{0}.$
@@ -110,9 +110,9 @@ Demuestre usando las propiedades anteriores, que en cualquier espacio vectorial 
   \item $C[a,b],$ el espacio de funciones continuas en el intervalo $[a,b].$
   \item El conjunto de número reales \emph{positivos} con las operaciones $u\oplus v:= u,v$ y $\a \cdot u:=u^{\a}.$
  \end{enumerate}
-\end{problema}
+\end{resuelto}
 
-% \begin{problema}
+% \begin{resuelto}
 %  Indique si los siguientes conjuntos son espacios vectoriales
 %  \begin{enumerate}
 %   \item El conjunto de matrices diagonales $2 \times 2,$ bajo la multiplicaci\'on, es decur, con la suma definida como $A\oplus B=AB.$
@@ -148,15 +148,15 @@ Demuestre usando las propiedades anteriores, que en cualquier espacio vectorial 
 % \a \cdot u := (\a u_{1},0).
 % $$
 % \end{enumerate}
-% \end{problema}
+% \end{resuelto}
 
-\begin{problema}
+\begin{resuelto}
  Considere la ecuaci\'on diferencial de segundo orden homog\'enea
  $$
 y''(x)+a(x)y'+b(x)y(x)=0
  $$
 donde $a,b$ son funciones continuas. Demuestre que el conjunto de soluciones de la ecuaci\'on diferencial es un espacio vectorial bajo las reglas usuales para la suma de funciones y multiplicaci\'on por escalares.
- \end{problema}
+ \end{resuelto}
 
 
 
