--- a/latex/exponencial_matrix.tex
+++ b/latex/exponencial_matrix.tex
@@ -57,7 +57,7 @@ $$
 \begin{cases}
  x(t)=\bm{x_{1}(t)\\ \vdots \\ x_{n}(t)} \\
  x'(t)=\bm{x_{1}'(t)\\ \vdots \\ x_{n}'(t)} \\
- A=\bm{a_{1,1}&...&a_{1,n}\\ \vdots & & \vdots \\ a_{n,1} & ... & a_{n,n}}  
+ A=\bm{a_{1,1}&...&a_{1,n}\\ \vdots & & \vdots \\ a_{n,1} & ... & a_{n,n}}
 \end{cases}
 $$
 el sistema anterior se puede reescribir como
@@ -78,7 +78,7 @@ Esta definición tiene sentido para matrices porque $A^{k}= A\cdots A$ un númer
 \begin{teorema}
  La única solución de la ecuación diferencial \emph{vectorial}
  $$
-x'(t)=Ax(t), 
+x'(t)=Ax(t),
  $$
  para $x(t)\in \R^{n}$ para cada $t\in \R$ y $A\in M_{n},$ con condición inicial
  $$
@@ -102,8 +102,8 @@ D^{k}=\bm{\lam_{1}^{k} & 0 & & \\ 0 & \lam_{2}^{k} & & \\ & & \ddots & \\ &&&\la
  $$
 \end{proposicion}
 
-\begin{proof} 
- La demostración se puede hacer por inducción. 
+\begin{proof}
+ La demostración se puede hacer por inducción.
 \end{proof}
 
 Supongamos que $T:\R^{n}\to \R^{n}$ es una tranformación lineal, cuya representación matricial $A$ (en la base estandar
@@ -127,7 +127,7 @@ $$
 R(M+N)S=RMS+RNS,
 $$
 o de manera más generalizar $$
-\sum\left( RM_{k}S \right)=R\left( \sum M_{k} \right) S. 
+\sum\left( RM_{k}S \right)=R\left( \sum M_{k} \right) S.
 $$
 
 Entonces
@@ -153,7 +153,7 @@ Basta entonces encontrar $e^{tD}.$ Pero como vimos, calcular las potencias de $D
 
 \subsection*{Ejemplos}
 
-\begin{problema}
+\begin{resuelto}
  Resuelva el siguiente sistema de ecuaciones diferenciales
  $$\begin{cases}
   x'=-x \\
@@ -162,8 +162,8 @@ Basta entonces encontrar $e^{tD}.$ Pero como vimos, calcular las potencias de $D
  con condiciones inciales
  $$
 x(0)=0, \, y(0)=3.
- $$ 
-\end{problema}
+ $$
+\end{resuelto}
 
 \begin{solucion}
  Rescribimos $x=x_{1}, y=x_{2}$ y podemos escribir el sistema de forma matricial, en la siguiente manera
