--- a/latex/fundamentos_ecuaciones_diferenciales.tex
+++ b/latex/fundamentos_ecuaciones_diferenciales.tex
@@ -8,82 +8,10 @@
 	\item Si la ecuación involucra derivadas de orden $n$, pero no de orden más alto, diremos que la propia ecuación es de \emph{orden $n$.}
 \end{itemize}
 
-%%%%%%%
-\begin{resuelto}
-
-\begin{enumerate}
-	\item
-		\label{exmp 02_01}
-		\begin{align*}
-		\left(y''\right)^{2}+3x=2\left(y'\right)^3
-		\end{align*}
-	\item
-		\label{exmp 02:02}
-		\begin{align*}
-		\dfrac{dy}{dx}+\dfrac{y}{x} = y^2
-		\end{align*}
-	\item
-	\label{exmp 02:03}
-		\begin{align*}
-			\dfrac{d^{2}Q}{dt^{2}}-3\dfrac{dQ}{dt}+2Q = 4\sin(2t)
-		\end{align*}
-	\item
-		\label{exmp 02:04}
-		\begin{align*}
-			\dfrac{dy}{dx}=\dfrac{x+y}{x-y}
-		\end{align*}
-
-		De manera equivalente
-		\begin{align*}
-			(x+y)dx+(y-x)dy = 0
-		\end{align*}
-	\item
-		\begin{align*}
-			\dfrac{\partial^{2}V}{\partial x^{2}} +
-			\dfrac{\partial^{2}V}{\partial y^{2}} = 0
-		\end{align*}
-\end{enumerate}
-
-\end{resuelto}
-%%%%%%%
-\subsection{Constantes arbitrarias}
-
-	Una constante arbitraria es un valor que es independiente de las variables involucradas en la ecuación.
-
-	Generalmente las denotaremos con las primeras letras del alfabeto:
-	\begin{align*}
-		A,B,C,c_{1},c_{2},...
-	\end{align*}
-
-%%%%%%%%%%%
-
-	\begin{ejemplo}
-		En la ecuación
-		\begin{align*}
-		y = x^{2}+c_{1}x+c_{2}
-		\end{align*}
-		los símbolos $ c_{1}, c_{2} $ representan constantes arbitrarias.
-
-	\end{ejemplo}
-
-%%%%%%%
-
-	\begin{ejemplo}
-		La relación $ y = Ae^{-4x+B} $ se puede reescribir como $ y = Ce^{-4x} $.  Por lo que sólo involucra una constante arbitraria.
-	\end{ejemplo}
-
-%%%%%%%
-\begin{observacion}
-
-	Siempre reduciremos las ecuaciones al número mínimo de constantes arbitrarias, a las que llamaremos \emph{esenciales}.
-
-\end{observacion}
-%%%%%%%%%%
-
 \subsection{Clasificación de ecuaciones diferenciales}
 
 \begin{resuelto}
-	Clasifica cada una e las siguientes ecuaciones diferenciales enunciando su orden; sus variables dependientes e independientes; y si es ordinaria o parcial:
+	Clasifica cada una de las siguientes ecuaciones diferenciales enunciando su orden; sus variables dependientes e independientes; y si es ordinaria o parcial:
 \end{resuelto}
 
 %%%%%%%
@@ -173,7 +101,39 @@
 	\end{enumerate}
 \end{proof}
 
+\subsection{Constantes arbitrarias}
+
+	Una constante arbitraria es un valor que es independiente de las variables involucradas en la ecuación.
+
+	Generalmente las denotaremos con las primeras letras del alfabeto:
+	\begin{align*}
+		A,B,C,c_{1},c_{2},...
+	\end{align*}
+
+%%%%%%%%%%%
+
+	\begin{ejemplo}
+		En la ecuación
+		\begin{align*}
+		y = x^{2}+c_{1}x+c_{2}
+		\end{align*}
+		los símbolos $ c_{1}, c_{2} $ representan constantes arbitrarias.
+
+	\end{ejemplo}
+
 %%%%%%%
+
+	\begin{ejemplo}
+		La relación $ y = Ae^{-4x+B} $ se puede reescribir como $ y = Ce^{-4x} $.  Por lo que sólo involucra una constante arbitraria.
+	\end{ejemplo}
+
+%%%%%%%
+\begin{observacion}
+
+	Siempre reduciremos las ecuaciones al número mínimo de constantes arbitrarias, a las que llamaremos \emph{esenciales}.
+
+\end{observacion}
+%%%%%%%%%%
 
 
 \subsection{Soluciones de ecuaciones diferenciales}
