--- a/latex/nucleo_e_imagen.tex
+++ b/latex/nucleo_e_imagen.tex
@@ -27,7 +27,7 @@ $\ker(T) < V, \Im(T)<W.$
  \end{align*}
 Por tanto, $\ker(T)<V.$
 
-Ahora, si $\a\in \R$ y $w,w' \in \Im(T),$ entonces Existen $v,v'\in V$ tales que $T(v)=w, T(w')=v'.$ Por lo cual, 
+Ahora, si $\a\in \R$ y $w,w' \in \Im(T),$ entonces Existen $v,v'\in V$ tales que $T(v)=w, T(w')=v'.$ Por lo cual,
 \begin{align*}
  \a w + w' &= \a T(v) + T(v') \\
  &= T(\a v + v').
@@ -35,11 +35,11 @@ Ahora, si $\a\in \R$ y $w,w' \in \Im(T),$ entonces Existen $v,v'\in V$ tales que
 Como $\a v + v' \in V,$ entonces $\a w + w' \in W.$
 \end{proof}
 
-\begin{problema}
+\begin{resuelto}
 \label{texmp:ker}
  Encontrar un conjunto de vectores que generen $\ker(T),$ para la tranformaci\'on lineal $T$ dada por
 (\ref{trans_exmp}).
-\end{problema}
+\end{resuelto}
 
 \begin{solucion}
  Supongamos que
@@ -65,7 +65,7 @@ $$
 \begin{bmatrix}
 1 & 2 & 0 & 0 \\
 0 & -1 & 1& 0 \\
-2 & 7 & -3 & 0 
+2 & 7 & -3 & 0
 \end{bmatrix}
 $$
 y utilizando Gauss-Jordan, se reduce a
@@ -105,11 +105,11 @@ es decir, todos los vectores en $\ker(T)$ son multiplos de $$\begin{bmatrix}
   $$
 \end{solucion}
 
-\begin{problema}
+\begin{resuelto}
 \label{texmp:im}
   Encontrar un conjunto de vectores que generen $\Im(T),$ para la tranformaci\'on lineal $T$ dada por
 (\ref{trans_exmp}).
-\end{problema}
+\end{resuelto}
 
 \begin{solucion}
  Un vector en $\Im(T)$ es de la forma,
@@ -171,6 +171,6 @@ $$
 
 \subsection*{Ejemplos}
 
-\begin{problema} Encuentre un conjunto de vectores, con el m\'inimo número de elementos posible, que generen $\ker(T)$ e
+\begin{resuelto} Encuentre un conjunto de vectores, con el m\'inimo número de elementos posible, que generen $\ker(T)$ e
 $\Im(T)$ para cada una de las transformaciones lineales del ejercicio \ref{exe:trans}.
-\end{problema}
+\end{resuelto}
