--- a/latex/problemas-primer-orden.tex
+++ b/latex/problemas-primer-orden.tex
@@ -1,4 +1,45 @@
-\section{Problemas}
+\section{Problemas de práctica}
+
+\subsection{Clasificación}
+
+
+%%%%%%%
+\begin{problema}
+	Clasifica cada una de las siguientes ecuaciones diferenciales enunciando su orden; sus variables dependientes e independientes; y si es ordinaria o parcial:
+	\begin{enumerate}
+		\item
+		\label{exmp 02_01}
+		\begin{align*}
+			\left(y''\right)^{2}+3x=2\left(y'\right)^3
+		\end{align*}
+		\item
+		\label{exmp 02:02}
+		\begin{align*}
+			\dfrac{dy}{dx}+\dfrac{y}{x} = y^2
+		\end{align*}
+		\item
+		\label{exmp 02:03}
+		\begin{align*}
+			\dfrac{d^{2}Q}{dt^{2}}-3\dfrac{dQ}{dt}+2Q = 4\sin(2t)
+		\end{align*}
+		\item
+		\label{exmp 02:04}
+		\begin{align*}
+			\dfrac{dy}{dx}=\dfrac{x+y}{x-y}
+		\end{align*}
+
+		\item
+		\begin{align*}
+			(x+y)dx+(y-x)dy = 0
+		\end{align*}
+		\item
+		\begin{align*}
+			\dfrac{\partial^{2}V}{\partial x^{2}} +
+			\dfrac{\partial^{2}V}{\partial y^{2}} = 0
+		\end{align*}
+	\end{enumerate}
+
+\end{problema}
 
 \subsection{Ecuaciones especiales}
 
