--- a/latex/subespacios_vectoriales.tex
+++ b/latex/subespacios_vectoriales.tex
@@ -2,7 +2,7 @@
 
 
 
-\begin{problema}
+\begin{resuelto}
  $\R^{2}$ es un espacio vectorial con las operaciones $$(u_{1},u_{2})+(v_{1},v_{2})=(u_{1}+v_{1},u_{2}+v_{2})$$ y
 $$\a(u_{1}, u_{2})=(\a u_{1}, \a u_{2}).$$
 
@@ -10,7 +10,7 @@ En la secci\'on anterior consideramos el subjunto $$L_{c}=\set{(u_{1},u_{2})|u_{
 una pendiente fija, y verificamos que en efecto, con las mismas operaciones es un espacio vectorial.
 
 Decimos entonces que $L_{c}$ es un subespacio vectorial de $\R^{2}.$
-\end{problema}
+\end{resuelto}
 
 \begin{definicion}
  Si $(V, +, \cdot )$ es un espacio vectorial  y
@@ -80,13 +80,13 @@ como
 \end{observacion}
 
 
-\begin{problema}
+\begin{resuelto}
  $u=(2,0,2)$ es combinaci\'on lineal de $v_{1}=(1,0,1)$ y $v_{2}=(0,1,1)$ porque $u=2v_{1}-v_{2}.$
 
  De hecho, $$\gen{v_{1},v_{2}}=\set{(a,b,a+b)\av a,b \in \R}<\R^{3}$$ es el plano que contiene a estos dos vectores.
 
  $(-1,-1,1)\notin \gen{v_{1},v_{2}},$ porque no vive en este plano.
-\end{problema}
+\end{resuelto}
 
 
 
@@ -96,7 +96,7 @@ como
 
 %Los siguientes ejercicios se pueden encontrar en \cite[sec. 4.3]{G} y \cite[sec. 2.2]{HK}.
 
-% \begin{problema} En los siguientes ejercicios, verificar que $W < V,$ con las operaciones $+,\cdot$ usuales en $V.$
+% \begin{resuelto} En los siguientes ejercicios, verificar que $W < V,$ con las operaciones $+,\cdot$ usuales en $V.$
 % Justifique su respuesta.
 %  \begin{enumerate}
 %   \item $V=\R^{2}, W=\set{(x,y)|ax+by=0},$ con $a,b\in \R$ fijos
@@ -108,11 +108,11 @@ como
 % \item $V=C[0,1], W=P_{n}[0,1],$ donde $P_{k}$ es el espacio de polinomios (con coeficientes reales) de grado
 % menor o igual a $k$ restringidos al intervalo $[0,1].$
 % \item $V=C[0,1], W=\set{f\in V|\int_{0}^{1}f(x)dx=0}$
-% 
+%
 %  \end{enumerate}
-% \end{problema}
+% \end{resuelto}
 
-\begin{problema}
+\begin{resuelto}
  ¿Cuál de los siguientes conjuntos de vectores $$u=(u_{1},u_{2},u_{3})$$ en $\R^{3}$ son subespacios de $\R^{3}$?
  \begin{enumerate}
   \item $\set{u\av u_{1}\geq 0}$
@@ -122,9 +122,9 @@ como
   \item $\set{u\av a_{2}\text{ es racional}}$
  \end{enumerate}
 
-\end{problema}
+\end{resuelto}
 
-\begin{problema}
+\begin{resuelto}
  Sea $V$ el espacio vectorial (real) de todas las funciones $f:\R \to \R.$ ¿Cuales de los siguientes conjuntos son
 subespacios de V?
 \begin{enumerate}
@@ -134,13 +134,13 @@ subespacios de V?
  \item todas las funciones $f$ tales que $f(-1)=0$
 \end{enumerate}
 
-\end{problema}
+\end{resuelto}
 
-% \begin{problema} ¿Es cierto que
+% \begin{resuelto} ¿Es cierto que
 % $$(3,-1,0,-1)\in \gen{(2,-1,3,2), (-1,1,1,-1), (1,1,9,-5)}$$?
-% \end{problema}
+% \end{resuelto}
 
-\begin{problema}
+\begin{resuelto}
  Sea $W$ el conjunto de todos los vectores $(x_{1},...,x_{5})$ que satisfacen
  \begin{align*}
   2x_{1}-x_{2}+\frac{4}{3}x_{3}-x_{4}&=0 \\
@@ -148,11 +148,11 @@ subespacios de V?
   9x_{1}-3x_{2}+6x_{3}-3x_{4}-3x_{5}&=0.
  \end{align*}
 Mostrar que $W$ es subespacio vectorial de $\R^{5}.$
-\end{problema}
+\end{resuelto}
 
 
 
-\begin{problema}[\dag]
+\begin{resuelto}[\dag]
 \begin{enumerate}
    \item  Verificar que si $U,W < V,$ entonces $U\cap W < V.$
    \item Demostrar que si $U=\set{u_{1},...,u_{m}}$ y $W=\set{w_{1},...,w_{m}},$ entonces
@@ -162,9 +162,9 @@ U\cap W = \gen{u_{1},...,u_{n},w_{1},...,w_{m}}.
 \end{enumerate}
 
 
-\end{problema}
+\end{resuelto}
 
-% \begin{problema}
+% \begin{resuelto}
 %  En los siguientes ejercicios, verificar \emph{si} $W < V,$ con las operaciones $+,\cdot$ usuales en $V.$
 % Justifique su respuesta.
 % \begin{enumerate}
@@ -179,20 +179,20 @@ U\cap W = \gen{u_{1},...,u_{n},w_{1},...,w_{m}}.
 %  \item $V=C[a,b], W=\set{f\in C[a,b]| \int_{a}^{b}f(x)dx=0}$
 %  \item $V=C[a,b], W=\set{f\in C[a,b]| \int_{a}^{b}f(x)dx=0}$
 %  \end{enumerate}
-% 
-% 
-% \end{problema}
+%
+%
+% \end{resuelto}
 
 
-\begin{problema}[\dag]
+\begin{resuelto}[\dag]
 \begin{itemize}
  \item Sean $u,v \in \R^{2}.$ Mostrar que $$W=\set{\a u+ \b v| \a, \b \in \R} < \R^{2}.$$
  \item Mostrar que si $u,v$ no son paralelos, entonces para cualquier $w\in \R^{2},$ podemos encontrar $\a,\b \in
 \R$ de manera que $w= \a u + \b v.$
 \end{itemize}
-\end{problema}
+\end{resuelto}
 
-\begin{problema}[\dag]
+\begin{resuelto}[\dag]
  Sea $A$ una matriz $m\times n$ con entradas reales. Demostrar que el conjunto de todas los vectores columna $u$ de
 longitud $n,$ tales que $Au=0$ es un subespacio vectorial de todos los vectores columna $\R^{n}.$
-\end{problema}
+\end{resuelto}
