--- a/latex/transformada_funciones_discontinuas.tex
+++ b/latex/transformada_funciones_discontinuas.tex
@@ -7,7 +7,7 @@
 	\label{bron:23.1}
 	f(x)\ast g(x)=\int_{0}^{x}f(t)g(x-t)dt.
 	\]
-	
+
 
 
 
@@ -18,9 +18,9 @@
 		f(x) \ast \left( g(x)+h(x) \right)
 		&= f(x)\ast g(x)+ f(x)\ast h(x).
 		\end{align*}
-		
+
 	\end{teorema}
-	
+
 
 
 
@@ -30,7 +30,7 @@
 		\lap{f(x) \ast g(x)}=F(s)G(s).
 		$$
 	\end{teorema}
-	
+
 
 
 
@@ -40,7 +40,7 @@
 	\label{bron:23.2}
 	\lapin{F(s)G(s)}=f(x) \ast g(x)= g(x) \ast f(x).
 	\]
-	
+
 
 
 \subsection{Funci\'on Escal\'on}
@@ -73,7 +73,7 @@
 		\caption{Función Escalón $$u(x-c)$$}
 		\label{fig:0402}
 	\end{figure}
-	
+
 
 
 
@@ -105,7 +105,7 @@
 		% img0403.png: 0x0 pixel, 300dpi, 0.00x0.00 cm, bb=
 		\label{fig:0403}
 	\end{figure}
-	
+
 
 
 
@@ -115,78 +115,78 @@
 		$$
 		\lap{u(x-c)f(x-c)}=e^{-cs}F(s).
 		$$
-		
+
 		De manera inversa
 		$$\lapin{e^{-cs}F(s)}=u(x-c)f(x-c).$$
 	\end{teorema}
-	
+
 
 
 \subsection{Ejemplos}
 
 
-	\begin{problema}
+	\begin{resuelto}
 		\label{bron:exmp:23.1} Sean $f(x)=e^{3x}$ y $g(x)=e^{2x}.$
 		\begin{enumerate}
 			\item Calcule $f(x) \ast g(x);$
 			\item calcule $g(x) \ast f(x);$
 			\item verifique el teorema \ref{bron:thm:23.1}.
 		\end{enumerate}
-		
-	\end{problema}
-	
+
+	\end{resuelto}
 
 
 
-	\begin{problema}
+
+	\begin{resuelto}
 		\label{bron:exmp:23.4}
 		Encuentre
 		$$
 		\lapin{\dfrac{1}{s^{2}-5s+6}}
 		$$
 		\emph{por convoluciones.}
-	\end{problema}
-	
+	\end{resuelto}
 
 
 
-	\begin{problema}
+
+	\begin{resuelto}
 		\label{bron:exmp:23.5}
 		Encuentre
 		$$
 		\lapin{\dfrac{6}{s^{2}-1}}
 		$$
 		\emph{por convoluciones.}
-	\end{problema}
-	
+	\end{resuelto}
 
 
 
-	\begin{problema}
+
+	\begin{resuelto}
 		\label{bron:exmp:23.6}
 		Encuentre
 		$$
 		\lapin{\dfrac{1}{s\left( s^{2}+4 \right)}}
 		$$
 		\emph{por convoluciones.}
-	\end{problema}
-	
+	\end{resuelto}
 
 
 
-	\begin{problema}
+
+	\begin{resuelto}
 		\label{bron:exmp:23.7}
 		Encuentre
 		$$
 		\lapin{\dfrac{1}{\left( s-1 \right)^{2}}}
 		$$
 		\emph{por convoluciones.}
-	\end{problema}
-	
+	\end{resuelto}
 
 
 
-	\begin{problema}
+
+	\begin{resuelto}
 		\label{bron:exmp:23.13}
 		Encuentre $\lap{g(x)}$ si
 		$$
@@ -195,12 +195,12 @@
 		\left( x-4 \right)^{2} & x\geq 4.
 		\end{cases}
 		$$
-	\end{problema}
-	
+	\end{resuelto}
 
 
 
-	\begin{problema}
+
+	\begin{resuelto}
 		\label{bron:exmp:23.14}
 		Encuentre $\lap{g(x)}$ si
 		$$
@@ -209,8 +209,8 @@
 		x^{2} & x\geq 4.
 		\end{cases}
 		$$
-	\end{problema}
-	
+	\end{resuelto}
+
 
 
 %%%%%%%%%%%
