--- a/latex/transformada_laplace.tex
+++ b/latex/transformada_laplace.tex
@@ -48,16 +48,16 @@ existe.
 \subsection{Ejemplos}
 
 
- \begin{problema}
+ \begin{resuelto}
   \label{bron:exmp:21.4}
   Encuentre la Transformada de Laplace de
   $f(x)=1.$
- \end{problema}
+ \end{resuelto}
 
 
 
 
- \begin{problema}
+ \begin{resuelto}
   \label{bron:exmp:21.9}
   Encuentre la Transformada de Laplace
   $$f(x)=\begin{cases}
@@ -65,7 +65,7 @@ existe.
      1 & x>4
     \end{cases}
 $$
- \end{problema}
+ \end{resuelto}
 
 
 
@@ -101,36 +101,36 @@ $$
 
 
 
- \begin{problema}
+ \begin{resuelto}
  \label{bron:exmp:21.10}
  Encuentre la Transformada de Laplace de $f(x)=3+2x^{2}.$
- \end{problema}
+ \end{resuelto}
 
 
 
- \begin{problema}
+ \begin{resuelto}
   \label{bron:exmp:21.11}
   Encuentre la Transformada de Laplace de
   $$f(x)=5\sin(3x)-17e^{-2x}$$
- \end{problema}
+ \end{resuelto}
 
 
 
 
- \begin{problema}
+ \begin{resuelto}
   \label{bron:exmp:21.12}
   Encuentre la Transformada de Laplace de
   $$f(x)=2\sin(x)+3\cos(2x).$$
- \end{problema}
+ \end{resuelto}
 
 
 
 
- \begin{problema}
+ \begin{resuelto}
   \label{bron:exmp:21.13}
   Encuentre la Transformada de Laplace de
   $$f(x)=2x^{2}-3x+4.$$
- \end{problema}
+ \end{resuelto}
 
 
 
@@ -180,11 +180,11 @@ $$
 %
 
 
- \begin{problema}
+ \begin{resuelto}
   \label{bron:exmp:21.14}
   Encuentre la Transformada de Laplace de
   $$g(x)=xe^{4x}$$
- \end{problema}
+ \end{resuelto}
 
 
 {}
@@ -194,29 +194,29 @@ $$
 \end{align*}
 
 
- \begin{problema}
+ \begin{resuelto}
   \label{bron:exmp:21.15}
   Encuentre la Transformada de Laplace de
   $$g(x)=e^{-2x}\sin(5x)$$
- \end{problema}
+ \end{resuelto}
 
 
 
 
- \begin{problema}
+ \begin{resuelto}
   \label{bron:exmp:21.16}
   Encuentre la Transformada de Laplace de
   $$g(x)=x\cos(\sqrt{7}x).$$
- \end{problema}
+ \end{resuelto}
 
 
 
 
- \begin{problema}
+ \begin{resuelto}
   \label{bron:exmp:21.17}
   Encuentre la Transformada de Laplace de
   $$g(x)=e^{-x}x\cos(2x).$$
- \end{problema}
+ \end{resuelto}
 
 
 
