--- a/latex/transformada_laplace_derivadas.tex
+++ b/latex/transformada_laplace_derivadas.tex
@@ -46,7 +46,7 @@ entonce \eqref{bron:24.3} se puede reescribir como
 \subsection{Ejemplos}
 
 
- \begin{problema}
+ \begin{resuelto}
   \label{bron:exmp:24.1}
   Resuelva
   $$\begin{cases}
@@ -54,12 +54,12 @@ entonce \eqref{bron:24.3} se puede reescribir como
      y(0)=2
     \end{cases}
 $$
- \end{problema}
+ \end{resuelto}
 
 
 
 
- \begin{problema}
+ \begin{resuelto}
   \label{bron:exmp:24.2}
   Resuelva
   $$\begin{cases}
@@ -67,12 +67,12 @@ $$
      y(0)=0
     \end{cases}
 $$
- \end{problema}
+ \end{resuelto}
 
 
 
 
- \begin{problema}
+ \begin{resuelto}
   \label{bron:exmp:24.3}
   Resuelva
   $$\begin{cases}
@@ -80,12 +80,12 @@ $$
      y(0)=1
     \end{cases}
 $$
- \end{problema}
+ \end{resuelto}
 
 
 
 
- \begin{problema}
+ \begin{resuelto}
   \label{bron:exmp:24.4}
   Resuelva
   $$\begin{cases}
@@ -93,12 +93,12 @@ $$
      y(0)=2, \, y'(0)=2.
     \end{cases}
 $$
- \end{problema}
+ \end{resuelto}
 
 
 
 
- \begin{problema}
+ \begin{resuelto}
   \label{bron:exmp:24.6}
   Resuelva
   $$\begin{cases}
@@ -106,12 +106,12 @@ $$
      y(0)=1, \, y'(0)=4.
     \end{cases}
 $$
- \end{problema}
+ \end{resuelto}
 
 
 
 
- \begin{problema}
+ \begin{resuelto}
   \label{bron:exmp:24.5}
   Resuelva
   $$\begin{cases}
@@ -119,7 +119,7 @@ $$
      y(0)=1, \, y'(0)=5.
     \end{cases}
 $$
- \end{problema}
+ \end{resuelto}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
