--- a/latex/valores_propios.tex
+++ b/latex/valores_propios.tex
@@ -97,7 +97,7 @@ p(\lam)=(-1)^{n}\det(A-\lam I)=\det(\lam I - A)
  $\lam$ es valor propio de $A$ si y solo si es raíz de $p(\lam).$
 \end{observacion}
 
-\begin{problema}
+\begin{resuelto}
  Encuentre los valores propios, de la transformación lineal con representación matricial
 \[
  \label{no:diagonal}
@@ -108,7 +108,7 @@ p(\lam)=(-1)^{n}\det(A-\lam I)=\det(\lam I - A)
   \end{bmatrix}.
 \]
 
-\end{problema}
+\end{resuelto}
 
 \begin{solucion}
  Primero determinamos el polinomio característico:
@@ -264,7 +264,7 @@ En este caso, el primer arreglo nos dice los valores propios, mientras que el se
 
 %Los ejercicios de esta sección se pueden encontrar en \cite[sec. 6.3]{G}.
 
-\begin{problema}
+\begin{resuelto}
 \label{exe:diagonal}
  Encuentre los valores propios de las siguientes matrices. Verifique sus resultados usando \texttt{WxMaxima}.
  \begin{enumerate}
@@ -276,7 +276,7 @@ A=\bm{-2&-2\\-5&1}
  \item$$A=\bm{2&-1\\5&-2}$$
 
  \item$$A=\bm{3&2\\-5&1}$$
- 
+
  \item $$A=\begin{bmatrix}
             4 & 2 \\
             3 & 3
@@ -312,7 +312,7 @@ $$
 
 \item$$A=\bm{-3&-7&-5\\2&4&3\\1&2&2}$$
 \end{enumerate}
-\end{problema}
+\end{resuelto}
 
 
 
