--- a/latex/variacion_parametros.tex
+++ b/latex/variacion_parametros.tex
@@ -50,9 +50,9 @@ Como $y_{1}(x),...,y_{n}(x)$ son soluciones linealmente independientes de la mis
 
 \begin{observacion}
 	El m\'etodo de variaci\'on de parametros puede ser aplicado a todas las ecuaciones diferenciales lineales, y por tanto tiene un mayor alcance que el m\'etodo de coeficientes indeterminados.
-	
+
 	Sin embargo, si ambos m\'etodos son aplicables, es preferible el de coeficientes indeterminados por ser más eficiente.
-	
+
 	Además, en algunos casos es imposible obtener una forma cerrada de la integral de $v'_{i}(x),$ y otros m\'etodos deben ser aplicados.
 \end{observacion}
 
@@ -61,26 +61,26 @@ Como $y_{1}(x),...,y_{n}(x)$ son soluciones linealmente independientes de la mis
 \subsection{Ejemplos}
 
 
-\begin{problema}
+\begin{resuelto}
 	\label{bron:exmp:12.1}
 	Resuelva $y'''+y'=\sec(x)$
-\end{problema}
+\end{resuelto}
 
 
 
 
-\begin{problema}
+\begin{resuelto}
 	\label{bron:12.2}
 	Resuelva $y'''-3y''+2y'=\dfrac{e^{x}}{1+e^{-x}}$
-\end{problema}
+\end{resuelto}
 
 
 
 
-\begin{problema}
+\begin{resuelto}
 	\label{bron:12.3}
 	Resuelva $y''-2y'+y=\dfrac{e^x}{x}$
-\end{problema}
+\end{resuelto}
 
 
 
@@ -88,17 +88,17 @@ Como $y_{1}(x),...,y_{n}(x)$ son soluciones linealmente independientes de la mis
 
 
 \label{bron:13.1}
-\begin{problema}
+\begin{resuelto}
 	Resuelva
 	$$
 	y''-y'-2y=4x^{2}, \ y(0)=1, y'(0)=4.
 	$$
-\end{problema}
+\end{resuelto}
 
 
 
 
-\begin{problema}
+\begin{resuelto}
 	\label{bron:13.4}
 	Resuelva
 	$$\begin{cases}
@@ -106,7 +106,7 @@ Como $y_{1}(x),...,y_{n}(x)$ son soluciones linealmente independientes de la mis
 		y(\pi)=0, y'(\pi)=0, y''(\pi)=1.
 	\end{cases}
 	$$
-\end{problema}
+\end{resuelto}
 
 
 
