--- a/latex/vectores_propios.tex
+++ b/latex/vectores_propios.tex
@@ -20,9 +20,9 @@ E_{\lam}=\ker\left( A-\lam I \right).
  $$
 \end{observacion}
 
-\begin{problema}
+\begin{resuelto}
  Encuentre el espacio propio asociado al valor propio $\lam_{1}=2$ de la matriz $A$ definida en (\ref{no:diagonal}).
-\end{problema}
+\end{resuelto}
 
 \begin{solucion}
  Si $$v=\bm{x \\ y \\ z}\in E_{\lam_{1}},$$ entonces $\left( A- 2I \right)v=0,$ es decir,
@@ -47,9 +47,9 @@ $$
 $$
  \end{solucion}
 
- \begin{problema}
+ \begin{resuelto}
   Encuentre el espacio propio asociado al valor propio $\lam_{2}=1$ de la matriz $A$ definida en (\ref{no:diagonal}).
- \end{problema}
+ \end{resuelto}
 
  \begin{solucion}
   $$
@@ -117,8 +117,8 @@ propios.
 
 \subsection*{Ejemplos}
 
-\begin{problema}
+\begin{resuelto}
  Encuentre los espacios propios de los diferentes valores propios de las matrices dadas en el ejercicio
  \ref{exe:diagonal}.
-\end{problema}
+\end{resuelto}
 
