--- a/latex/coordenadas.tex
+++ b/latex/coordenadas.tex
@@ -41,7 +41,7 @@ $$e_{1}=f_{1},..., e_{n}=f_{n}.$$
 conjuntos sean diferentes.
 \end{observacion}
 
-\begin{problema}
+\begin{resuelto}
  $$
 \left( \begin{bmatrix}
         1 \\ 0
@@ -61,7 +61,7 @@ conjuntos sean diferentes.
  \right)
  $$
  son dos bases ordenadas distintas de $\R^{2}.$
-\end{problema}
+\end{resuelto}
 
 Si consideramos $E$ como la base ordenada $\left( e_{1},...,e_{n} \right)$ entonces, la expresi\'on (\ref{coordenadas})
 se puede escribir como
@@ -72,7 +72,7 @@ $$
 $$
 Decimos que $v_{1},...,v_{n}$ son las cordenadas de $v$ en la base $E.$
 
-\begin{problema}
+\begin{resuelto}
  Si consideramos la base ordenada $$E=(\bm{1\\1}, \bm{0\\1},)$$ de $\R^{2},$ entonces
  $$
 \bm{u\\v}=\bm{u\\v}_{E}.
@@ -85,7 +85,7 @@ F=\left( \bm{0\\1}, \bm{1\\0} \right),
  $$
 \bm{u\\v}=\bm{v\\u}_{F}.
  $$
-\end{problema}
+\end{resuelto}
 
 \begin{definicion}
  La base $$
@@ -143,7 +143,7 @@ de cada elemento de la base $F$ en términos de $B.$ Estos vectores generen todo
 que la matriz $P_{F,B}$ sea invertible.
 \end{observacion}
 
-\begin{problema}
+\begin{resuelto}
  \begin{enumerate}
   \item Verifique que $$F=\basis{
 \bm{1\\0\\0} , \bm{0 \\ -2 \\ 0} , \bm{1 \\ 0 \\ 1}
@@ -153,7 +153,7 @@ que la matriz $P_{F,B}$ sea invertible.
 
 \begin{solucion}
  Por la proposición \ref{prop:1}, basta verificar que $F$ es un conjunto linealmente independiente. Ahora bien, por la
-proposición \ref{prop:2}, basta verificar que 
+proposición \ref{prop:2}, basta verificar que
  $$\begin{vmatrix}
     1 & 0 & 1 \\ 0 & -2 & 0 \\ 0 & 0 & 1
    \end{vmatrix}\neq 0.
@@ -248,13 +248,13 @@ invert(P);
 
 \end{solucion}
 
- 
-\end{problema}
+
+\end{resuelto}
 
 
 \subsection*{Ejemplos}
 
-\begin{problema}
+\begin{resuelto}
  \label{matriz:paso}
  Encuentre las matrices de paso $P_{F,E}$ y $P_{E,F}$ para los siguientes casos.
   \begin{enumerate}
@@ -263,10 +263,10 @@ invert(P);
   \item $E$ la base canónica de $\R^{3}$, $F=\left(\bm{1\\0\\0},\bm{1\\1\\0},\bm{1\\1\\1}\right)$.
  \end{enumerate}
 
-\end{problema}
+\end{resuelto}
 
 
-\begin{problema}
+\begin{resuelto}
  Encuentre las coordenadas de los siguientes vectores $v$, en las bases ordendas $F$ indicadas. Utilice el resultado en
 el ejercicio \ref{matriz:paso}.
  \begin{enumerate}
@@ -275,15 +275,15 @@ el ejercicio \ref{matriz:paso}.
   \item $v=\bm{3\\-1\\5}$, $F=\left(\bm{1\\0\\0},\bm{1\\1\\0},\bm{1\\1\\1}\right)$.
  \end{enumerate}
 
-\end{problema}
+\end{resuelto}
 
-\begin{problema}
+\begin{resuelto}
  Encuentre las coordendas de los elementos de la base canonica de $V$ en terminos de las bases ordenadas $F$ indicadas.
 Utilice el resultado en el ejercicio \ref{matriz:paso}.
  \begin{enumerate}
   \item $V=\R^{2}$, $F=\left(\bm{1\\0},\bm{0\\-1}\right)$,
   \item $V=\R^{2}$, $F=\left(\bm{1\\0},\bm{1\\1}\right)$
   \item $V=\R^{3}$, $F=\left(\bm{1\\0\\0},\bm{1\\1\\0},\bm{1\\1\\1}\right)$.
- \end{enumerate} 
-\end{problema}
+ \end{enumerate}
+\end{resuelto}
 
