--- a/latex/transformaciones_lineales.tex
+++ b/latex/transformaciones_lineales.tex
@@ -17,13 +17,13 @@ En el caso $V=W,$ decimos que $T:V\to V$ es un operador y al conjunto de operado
 En el caso $W=\R,$ decimos que $T:V\to \R$ es un funcional en $V.$
 \end{definicion}
 
-\begin{problema}
+\begin{resuelto}
  Sea $a=[a_{1},...,a_{n}]\in \R^{n}$ fijo y definamos $T:\R^{n}\to \R, \, T(u)=a \cdot u.$ Entonces, $T$ es una
-transformaci\'on lineal. 
-\end{problema}
+transformaci\'on lineal.
+\end{resuelto}
 
 
-\begin{problema}
+\begin{resuelto}
 \label{matriz:trans_lin}
 Sea $A=\begin{bmatrix}
         a_{ij}
@@ -38,7 +38,7 @@ Sea $$e_{k}=\begin{bmatrix}
              \vdots \\
              1 \\
              \vdots \\
-             0             
+             0
             \end{bmatrix}
 $$
 el vector columna con un $1$ en la $k-$\'esima posici\'on y ceros en el resto, y sea $T:\R^{n}\to \R^{m}$ una
@@ -46,16 +46,16 @@ transformaci\'on lineal. Entonces, $T(e_{k})\in \R^{m}$ y digamos que es de la f
 $$
 T(e_{k})=\begin{bmatrix}
           a_{1k}\\
-          \vdots \\     
+          \vdots \\
           a_{mk} \\
          \end{bmatrix}.
 $$
 
 Si definimos $A=[a_{ij}]\in M_{mn}$ entonces $T(e_{k})=Ae_{k}, \, k=1,...,n.$ Por linealidad tanto de $T$ como de $A,$
 obtenemos que $T(x)=Ax,$ para todo vector $x\in \R^{n}.$
-\end{problema}
+\end{resuelto}
 
-\begin{problema}
+\begin{resuelto}
 Las siguientes transformaciones son lineales:
 \begin{itemize}
  \item $T:C^{1}[0,1]\to C^{0}[0,1],$
@@ -68,14 +68,14 @@ T(f)=\int_{0}^{1}f(t)dt.
 $$
 \item $T:C^{0}[0,1]\to C^{1}[0,1],$
 $$
-T(f)(x)=C+\int_{0}^{x}f(t)dt, 
+T(f)(x)=C+\int_{0}^{x}f(t)dt,
 $$
 donde $x\in[0,1]$ y $C\in \R$ es alguna constante.
 \end{itemize}
 
-\end{problema}
+\end{resuelto}
 
-\begin{problema}
+\begin{resuelto}
  Indique si la siguiente transformaci\'on $T:\R^{3}\to \R^{3}$ es lineal y de ser as\'i, encuentre su representaci\'on
 matricial.
 \[
@@ -88,7 +88,7 @@ matricial.
    \end{bmatrix}
 \]
 
-\end{problema}
+\end{resuelto}
 
 \begin{solucion}
  La prueba de que la transformaci\'on es lineal se deja al lector. Ahora bien,
@@ -126,7 +126,7 @@ T\begin{bmatrix}
 
 \subsection*{Operadores en  $\R^{n}$}
 
-Sean $T,S \in L(\R^{n}).$ La composici\'on $TS,$ es decir, $TS(x)=T(S(x))$ es de nuevo un operador y de hecho, si 
+Sean $T,S \in L(\R^{n}).$ La composici\'on $TS,$ es decir, $TS(x)=T(S(x))$ es de nuevo un operador y de hecho, si
 $B=[b_{ij}]$ es la matriz asociada a $T$ como en el ejemplo \ref{matriz:trans_lin} y $A=[A_{ij}]$ la asociada a $S,$
 entonces la matriz asociada a $TS$ es $C=[c_{ij}]$ conjunto $$
 c_{ij}=\sum_{k}^{n}b_{ik}a_{kj}.
@@ -140,9 +140,9 @@ El operador de $T$ con $S$ suma esta definido como $(T+S)(u)=T(u)+S(u),$ y de he
 $$
 
 Dos operadores especiales en $R^{n}$ son la \emph{transformaci\'on cero} $0(x)=0$ y la \emph{identidad} $\id(x)=x.$
-\begin{problema}[\dag]
- Encuentre la matriz asociada a los operadores cero e identidad. 
-\end{problema}
+\begin{resuelto}[\dag]
+ Encuentre la matriz asociada a los operadores cero e identidad.
+\end{resuelto}
 
 Podemos definir la multiplicaci\'on de operadores por escalares de la siguiente forma. $(\a T)(u)=\a T(u).$ De esta
 manera, con la operaci\'on suma entre operadores y esta multiplicaci\'on por escalares, resulta que $L(\R^{n})$ es un
@@ -157,7 +157,7 @@ De hecho, si $A$ es la matriz asociada a $P,$ entonces $A^{-1}$ es la asociada a
 
 \subsection*{Ejemplos}
 
-\begin{problema} \label{exe:trans}Verificar que las siguientes transformaciones son lineales, y encontrar la representaci\'on
+\begin{resuelto} \label{exe:trans}Verificar que las siguientes transformaciones son lineales, y encontrar la representaci\'on
 matricial de cada una.
 \begin{enumerate}
  \item (Proyecci\'on sobre el plano)$$
@@ -171,7 +171,7 @@ T\begin{bmatrix}
 
  \item $$
 T\begin{bmatrix}
-  x \\ y \\z 
+  x \\ y \\z
  \end{bmatrix}
  =\begin{bmatrix}
   x - y\\ y+z \\ 2x - y - z \\ -x+y+2z
@@ -189,7 +189,7 @@ T\begin{bmatrix}
 
 \item$$
 T\begin{bmatrix}
-  x \\ y 
+  x \\ y
  \end{bmatrix}
  =\begin{bmatrix}
    2x-y\\ 2y-4x
@@ -198,7 +198,7 @@ $$
 
 \item$$
 T\begin{bmatrix}
-  x \\ y 
+  x \\ y
  \end{bmatrix}
  =\begin{bmatrix}
    2x \\ 3x-y
@@ -216,7 +216,7 @@ $$
 
 \item $$
 T\begin{bmatrix}
-  x \\ y 
+  x \\ y
  \end{bmatrix}
  =\begin{bmatrix}
 2x+y \\ 2y-x \\ x+8y
@@ -267,13 +267,13 @@ $$
 %  $$
 
 %  \item $T:P_{2} \to P_{3}, (Tp)(x)=xp(x).$
-% 
+%
 %  \item $T:P_{3} \to P_{2}, T(a+bx+cx^{2}+dx^{3})=b+cx^{2}.$
 \end{enumerate}
-\end{problema}
+\end{resuelto}
 
-\begin{problema}
+\begin{resuelto}
  Encuentre una expresi\'on matemática para la transformaci\'on que rota un vector en el plano, con un ángulo $\phi$
 en el sentido positivo (contrario a las manecillas del reloj). Indique si esta transformaci\'on es lineal y de serlo,
 encuentre su representaci\'on matricial. \emph{Sugerencia: Exprese el vector en coordenadas polares.}
-\end{problema}
+\end{resuelto}
